--- a/style/style.css
+++ b/style/style.css
@@ -826,6 +826,15 @@ section:nth-of-type(4) .blog-wrap #thumb-3 {
 section:nth-of-type(4) .blog-wrap #thumb-4 {
   background: url("../img/blog-4.jpg") center center/cover;
 }
+section:nth-of-type(4) .blog-wrap #thumb-5 {
+  background: url("../img/blog-5.jpg") center center/cover;
+}
+section:nth-of-type(4) .blog-wrap #thumb-6 {
+  background: url("../img/blog-6.jpg") center center/cover;
+}
+section:nth-of-type(4) .blog-wrap #thumb-7 {
+  background: url("../img/blog-7.jpg") center center/cover;
+}
 section:nth-of-type(4) .blog-wrap .fade-wrap {
   transition: opacity 0.3s;
 }
